# TicTacToe

./: CMakeLists.txt  README.md
cmake/: FindCXX11.cmake
headers/: tictactoe.hxx
src/: CMakeLists.txt  tictactoe.cxx
tests/: CMakeLists.txt  test_tictactoe.cxx
